# Enigma

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/: coding_tasks.json
docs/: agent-assembly.md
docs/architecture/: agent-harness-v1-overview.md
docs/review-pack/: README.md
enigma/: __init__.py  cli.py  context_manager.py  display.py  evaluator.py  memory.py  metrics.py  models.py  repl.py  runtime.py  skills.py  task_state.py  tools.py  web_search.py  workspace.py
enigma/skills/: doc-writer.md  explain.md  refactor.md  reviewer.md  test-writer.md
enigma/storage/: __init__.py  session_db.py
scripts/: collect_resume_metrics.py  run_large_scale_experiments.py  run_provider_experiments.py
tests/: test_context_manager.py  test_enigma.py  test_evaluator.py  test_memory.py  test_metrics.py  test_plan_mode.py  test_review.py  test_run_store.py  test_safety_invariants.py  test_session_db.py  test_skills.py  test_task_state.py
