[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enigma"
version = "0.1.0"
description = "Small local coding agent for Ollama and OpenAI-compatible models"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
enigma = "enigma.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.4.4",
]

[tool.setuptools]
packages = ["enigma"]

[tool.setuptools.package-data]
enigma = ["skills/*.md"]
